<?xml version="1.0" encoding="utf-8"?><resources><string name="anonymous_header">Anonymous device</string>
<string name="app_name">edna push demo</string>
<string name="appbar_app_name">edna push demo</string>
<string name="appid_change_cancel">Cancel</string>
<string name="appid_change_header">Change appId</string>
<string name="appid_change_hint">appId</string>
<string name="appid_change_impossible">It is impossible to change the appId since it is specified in the application manifest</string>
<string name="appid_change_impossible_proceed">Ok</string>
<string name="appid_change_proceed">Restart</string>
<string name="cancel_btn">Cancel</string>
<string name="clear_history_header">Clear message history\?</string>
<string name="clear_history_subheader">All messages received by the app will be deleted</string>
<string name="copy_device_info_btn">Copy short device info</string>
<string name="copy_push_device_info_btn">Copy long device info</string>
<string name="delete_btn">Delete</string>
<string name="error_header">Oops!</string>
<string name="lmenu_appid_change">Change appId</string>
<string name="lmenu_clear_history_btn">Clear messages</string>
<string name="lmenu_device_address">Address</string>
<string name="lmenu_device_id">UID</string>
<string name="lmenu_device_info_header">Device info</string>
<string name="lmenu_device_name">Model</string>
<string name="lmenu_reset_push_token">Reset push address</string>
<string name="login_btn">Login</string>
<string name="login_header">Login</string>
<string name="login_id">Subscriber Id</string>
<string name="login_subheader">Specify a subscriber ID to bind the device to it.\nUntil you do, the device will be considered anonymous.</string>
<string name="login_type">Subscriber Id Type</string>
<string name="login_type_apple">Apple Id</string>
<string name="login_type_cookie">Cookie Id</string>
<string name="login_type_email">E-mail</string>
<string name="login_type_facebook">Facebook Id</string>
<string name="login_type_google">Google Id</string>
<string name="login_type_phone">Phone number</string>
<string name="login_type_telegram">Telegram Id</string>
<string name="login_type_userid">User Id</string>
<string name="login_type_utm">UTM</string>
<string name="login_type_yandex">Yandex Id</string>
<string name="logout_btn">Logout</string>
<string name="notif_list_onboarding_header">New notifications will appear here</string>
<string name="notif_list_onboarding_subheader">Send a push notification via the edna platform and it will appear here.\n\nYou can also specify a client ID to link the device to.\nUntil you do, the device will be considered anonymous.</string>
<string name="push_app_name">Demo app</string>
<string name="push_details_additional_intent_subheader">Additional from Intent</string>
<string name="push_details_additional_subheader">Additional</string>
<string name="push_details_button">Button %1$d</string>
<string name="push_details_button_1">Button 1</string>
<string name="push_details_button_2">Button 2</string>
<string name="push_details_collapsed_header">Collapsed Push Header</string>
<string name="push_details_collapsed_icon">Collapsed Push Icon</string>
<string name="push_details_collapsed_text">Collapsed Push Text</string>
<string name="push_details_extended_header">Extended Push Header</string>
<string name="push_details_extended_icon">Extended Push Icon</string>
<string name="push_details_extended_text">Extended Push Text</string>
<string name="push_details_nav_info">Tap on the button «%s» with URI «%s»</string>
<string name="push_details_nav_info_default">Tap on the push with URI «%s»</string>
<string name="push_details_navigation_subheader">Navigation type</string>
<string name="push_details_no_nav_info">There was no transition</string>
<string name="push_details_params_subheader">Parameters</string>
<string name="push_list_app_name">edna</string>
<string name="push_not_exist">Push was deleted</string>
<string name="push_params_header">Notification</string>
<string name="reset_token_cancel">Cancel</string>
<string name="reset_token_fcm">FCM</string>
<string name="reset_token_hcm">HCM</string>
<string name="reset_token_header">Reset push address</string>
<string name="reset_token_proceed">Reset</string>
<string name="reset_token_rcm">RCM</string>
<string name="reset_token_subheader">Choose the PNS</string>
<string name="toast_copy_ok">Copied to the clipboard</string>
<string name="toast_reset_push_token">New address: %s</string>
</resources>