<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:id="@+id/loginTitle"
        style="@style/TextPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="start"
        android:text="@string/reset_token_header"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginButton"
        style="@style/TextSecondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="30dp"
        android:lineHeight="20dp"
        android:text="@string/reset_token_subheader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTitle"
        tools:targetApi="p" />

    <CheckBox
        android:id="@+id/fcmToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_token_fcm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <CheckBox
        android:id="@+id/hcmToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_token_hcm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fcmToken" />

    <CheckBox
        android:id="@+id/rcmToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_token_rcm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hcmToken" />

</androidx.constraintlayout.widget.ConstraintLayout>